@@ -6,5 +6,7 @@
 
 %include ApproximationAlgorithmImplementation_doc.i
 
+%ignore OT::ApproximationAlgorithmImplementation::getSelectionHistory;
+
 %include openturns/ApproximationAlgorithmImplementation.hxx
 namespace OT { %extend ApproximationAlgorithmImplementation { ApproximationAlgorithmImplementation(const ApproximationAlgorithmImplementation & other) { return new OT::ApproximationAlgorithmImplementation(other); } } }
